Add password reset

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -3,6 +3,8 @@ michael:
   email: michael@example.com
   password_digest: <%= User.digest('password') %>
   admin: true
+  activated: true
+  activated_at: <%= Time.zone.now %>
 
 archer:
   name: Sterling Archer
